apps/web/pterodactyl-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-panel
  namespace: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pterodactyl-panel
  template:
    metadata:
      labels:
        app: pterodactyl-panel

    spec:
      containers:
      - name: pterodactyl-panel
        # https://hub.docker.com/r/ccarney16/pterodactyl-panel/tags
        image: ccarney16/pterodactyl-panel:v1.11.7
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "800Mi"
            cpu: "3000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /data
      volumes:
      - name: config
        hostPath:
          path: /lxc-configs/pterodactyl-panel-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
