apps/web/pterodactyl-panel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel
spec:
  selector:
    app: pterodactyl-panel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
