apps/web/pterodactyl-panel/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: &appname pterodactyl-panel
spec:
  entryPoints:
    - websecure
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: *appname
          port: 80
      middlewares:
        - name: https-only
        - name: ingress-traefik-traefik-bouncer@kubernetescrd
  tls:
    secretName: pterodactyl-panel-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: pterodactyl-panel-http
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: pterodactyl-panel
          port: 80
      middlewares:
        - name: https-only
        - name: ingress-traefik-traefik-bouncer@kubernetescrd
